# 2d-incompressible-NS-solver-cuda

./: CMakeLists.txt  PlotOutput.m  README.md  deleteME.md  main.cpp
CFDCode_MATLAB/: compute_RHS.m  compute_curl.m  compute_projection_step.m  empirical_stability_bounds.m  main.m  test_computeRHS.m  test_compute_projection_step.m  test_time_advance_RK3.m  time_advance_RK3.m
include/: functionCalls.h  functionCalls.h.gch  variableCalls.h
src/: compute_RHS.cpp  compute_RHS.cu  compute_curl.cpp  compute_projection_step.cpp  compute_projection_step.cu  cuda_helper.cuh  helper_functions.cpp  time_advance_RK3.cpp  time_advance_RK3.cu
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  computeErrorRHS.cpp  test_computeRHS.cpp  testcomputeRHS
